批量导出导入

--- a/templates/login.html
+++ b/templates/login.html
@@ -46,7 +46,7 @@
 						</div>
 						<div class="form-group">
 							<label>密码</label>
-							<input type="password" name="password" placeholder="Password" value="kbsonlong" class="form-control input-sm bounceIn animation-delay4">
+							<input type="password" name="password" placeholder="Password" value="admin" class="form-control input-sm bounceIn animation-delay4">
 						</div>
                         <div class="row">
                             <div class="col-sm-8">
