--- a/templates/header.html
+++ b/templates/header.html
@@ -84,7 +84,7 @@
                                     </div>
                                 {% endif %}
                                 <div class="col-xs-3 text-center">
-                                    <a href="#" class="btn btn-default btn-flat">退出</a>
+                                    <a href="{% url "rbac:logout" %}" class="btn btn-default btn-flat">退出</a>
                                 </div>
                             </div>
                         </li>
